# mdde

./: .gitignore  BUILD_GUIDE.md  BUILD_SCRIPTS_README.md  CENTOS7_SUPPORT.md  ENV_COMMAND_USAGE.md  INSTALLER_GUIDE.md  INTERACTIVE_USAGE.md  LICENSE  LOGS_COMMAND_USAGE.md  PROJECT_SUMMARY.md  README.md  README_EN.md  README_ZH.md  build-installer.ps1  build-installer.sh  build.ps1  build.sh  docker-building-env.ps1  dockerfile  make-package.bat  make-package.sh  package.sh
.github/: WORKFLOW_GUIDE.md  dependabot.yml
.github/workflows/: build.yml  pr-check.yml
dev-docker/dotnet/: run-cmd.ps1
dev-docker/dotnet/net3.1_sdk/: dockerfile
dev-docker/nodejs/: Dockerfile  create-dev-env.ps1  docker-compose.yml  run-cmd.ps1
docker/: README.md  build-centos7.sh  centos7.Dockerfile
mdde-cmd/: .gitignore  .mdde.env.example  Cargo.toml  ENV_COMMAND_USAGE.md  INTERACTIVE_USAGE.md  Makefile  PROJECT_SUMMARY.md  build-installer.ps1  build.ps1  build.sh  create-installer.ps1  quick-start.ps1  quick-start.sh  readme.md
mdde-cmd/examples/: basic_usage.rs  docker_usage.rs
mdde-cmd/installer/: README.md  installer-info.txt  installer-post.txt  mdde-setup.iss
mdde-cmd/src/: cli.rs  config.rs  docker.rs  error.rs  http.rs  i18n.rs  lib.rs  main.rs  utils.rs
mdde-cmd/src/commands/: clean.rs  create.rs  doctor.rs  env.rs  exec.rs  init.rs  logs.rs  mod.rs  restart.rs  run.rs  start.rs  status.rs  stop.rs  version.rs
mdde-cmd/src/docker/: README.md
mdde-cmd/tests/: config_env_override.rs  integration_tests.rs
mdde-web/: .dockerignore  API_USAGE_EXAMPLES.md  Dockerfile  PROJECT_SUMMARY.md  README.md  admin.html  dev.ps1  docker-build.ps1  docker-build.sh  docker-run.ps1  index.html  mdde.ps1  mdde.sh  package.json  server.js  setup.ps1  start.bat  start.ps1  start.sh  test-new-api.ps1  test-new-api.sh  test.ps1
mdde-web/scripts/default/: run.ps1  run.sh  start.sh
mdde-web/scripts/dotnet3.1/: docker-compose.yml
mdde-web/scripts/dotnet9/: create.ps1  docker-compose.yml
mdde-web/scripts/node16/: docker-compose.yml
mdde-web/scripts/node22/: docker-compose.yml
release-builds/: build-info.json
scripts/: README.md  test-centos7-build.sh
