[package]
name = "mdde"
version = "0.2.2"
edition = "2021"
authors = ["luqizheng <luqizheng@hotmail,com>"]
description = "一个基于 Rust 编写的跨平台命令行工具，用于管理 Docker 多语言开发环境"
license = "MIT"
repository = "https://github.com/luqizheng/mdde"
keywords = ["docker", "development", "environment", "cli", "dotnet", "java", "nodejs", "python"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI 框架
clap = { version = "4.4", features = ["derive"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "multipart"] }

# OpenSSL 兼容性支持
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 文件系统
dirs = "6.0"
walkdir = "2.4"

# 网络
url = "2.4"

# 其他工具
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
indicatif = "0.18"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mdde"
path = "src/main.rs"

# 跨平台编译目标
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

# Features 配置
[features]
default = []
# CentOS 7 兼容性（使用系统 OpenSSL 1.0）
centos7-compat = ["openssl", "openssl-sys"]
# 静态链接 OpenSSL（适用于老系统）
static-ssl = ["reqwest/native-tls-vendored"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
